app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: bloodbankApp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: application-container
          image: venkatasaivinay/php:appImage
          ports:
            - containerPort: 80
        # configmap integration
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
