db-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-mystatefulset
  namespace: bloodbankapp
spec:
  serviceName: bloodbank-service
  replicas: 1
  selector:
    matchLabels:
      app: app-database
  template:
    metadata:
      labels:
        app: app-database
    spec:
      containers:
      - name: app-database
        image: venkatasaivinay/php:dbImage

        ports:
          - containerPort: 3306

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

        volumeMounts:
          - name: bloodbank-pvc
            mountPath: /var/lib/mysql

      volumeClaimTemplates:
        - metadata:
            name: mysql-data

          spec:
            accessModes:
              - ReadWriteOnce

            storageClassName: gp2

            resources:
              requests:
                storage: 2Gi
