app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: bloodbankApp

spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80
