db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bloodbank-service
  namespace: bloodbankApp
spec:
  ClusterIp: None
  selector:
    app: app-database
  ports:
    - port: 3306
      targetPort: 3306
