network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bloodbank-network-policy
  namespace: bloodbankapp
spec:
  podSelector:
    matchLabels:
      app: app

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
              
        - podSelector:
            matchLabels:
              app: app
      ports:
        - protocol: TCP
          port: 80

  egress:
    - to:
        - podSelector:
            matchLabels:
              app: app-database
      ports:
        - protocol: TCP
          port: 3306

    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
